Добавляет иконки в футер

--- a/index.html
+++ b/index.html
@@ -154,28 +154,52 @@
               <p class="text profession">Product Designer</p>
               <ul class="list social-list">
                 <li class="social-item">
-                  <a class="social-link" href="https://www.instagram.com/">
+                  <a
+                    class="social-link"
+                    href="https://www.instagram.com/"
+                    aria-label="Instagram"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
                     <svg class="social-icon" width="20" height="20">
                       <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-item">
-                  <a class="social-link" href="https://twitter.com/">
+                  <a
+                    class="social-link"
+                    href="https://twitter.com/"
+                    aria-label="Twitter"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
                     <svg class="social-icon" width="20" height="20">
                       <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-item">
-                  <a class="social-link" href="https://www.facebook.com/">
+                  <a
+                    class="social-link"
+                    href="https://www.facebook.com/"
+                    aria-label="Facebook"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
                     <svg class="social-icon" width="20" height="20">
                       <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-item">
-                  <a class="social-link" href="https://www.linkedin.com/">
+                  <a
+                    class="social-link"
+                    href="https://www.linkedin.com/"
+                    aria-label="Linkedin"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
                     <svg class="social-icon" width="20" height="20">
                       <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
@@ -193,6 +217,60 @@
               />
               <h3 class="name-title">Ольга Репина</h3>
               <p class="text profession">Frontend Developer</p>
+              <ul class="list social-list">
+                <li class="social-item">
+                  <a
+                    class="social-link"
+                    href="https://www.instagram.com/"
+                    aria-label="Instagram"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a
+                    class="social-link"
+                    href="https://twitter.com/"
+                    aria-label="Twitter"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a
+                    class="social-link"
+                    href="https://www.facebook.com/"
+                    aria-label="Facebook"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a
+                    class="social-link"
+                    href="https://www.linkedin.com/"
+                    aria-label="Linkedin"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="item">
               <img
@@ -204,6 +282,60 @@
               />
               <h3 class="name-title">Николай Тарасов</h3>
               <p class="text profession">Marketing</p>
+              <ul class="list social-list">
+                <li class="social-item">
+                  <a
+                    class="social-link"
+                    href="https://www.instagram.com/"
+                    aria-label="Instagram"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a
+                    class="social-link"
+                    href="https://twitter.com/"
+                    aria-label="Twitter"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a
+                    class="social-link"
+                    href="https://www.facebook.com/"
+                    aria-label="Facebook"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a
+                    class="social-link"
+                    href="https://www.linkedin.com/"
+                    aria-label="Linkedin"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="item">
               <img
@@ -215,6 +347,110 @@
               />
               <h3 class="name-title">Михаил Ермаков</h3>
               <p class="text profession">UI Designer</p>
+              <ul class="list social-list">
+                <li class="social-item">
+                  <a
+                    class="social-link"
+                    href="https://www.instagram.com/"
+                    aria-label="Instagram"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a
+                    class="social-link"
+                    href="https://twitter.com/"
+                    aria-label="Twitter"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a
+                    class="social-link"
+                    href="https://www.facebook.com/"
+                    aria-label="Facebook"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a
+                    class="social-link"
+                    href="https://www.linkedin.com/"
+                    aria-label="Linkedin"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--Regular customer-->
+      <section class="section">
+        <div class="container">
+          <h2 class="customer-title">Постоянные клиенты</h2>
+          <ul class="list customer-list">
+            <li class="customer-item">
+              <a href="" class="link customer-link">
+                <svg class="customer-icon" width="44" height="50">
+                  <use href="./images/sprite.svg#icon-logo_1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="" class="link customer-link">
+                <svg class="customer-icon" width="40" height="52">
+                  <use href="./images/sprite.svg#icon-logo_2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="" class="link customer-link">
+                <svg class="customer-icon" width="40" height="42">
+                  <use href="./images/sprite.svg#icon-logo_3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="" class="link customer-link">
+                <svg class="customer-icon" width="80" height="42">
+                  <use href="./images/sprite.svg#icon-logo_4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="" class="link customer-link">
+                <svg class="customer-icon" width="60" height="48">
+                  <use href="./images/sprite.svg#icon-logo_5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="" class="link customer-link">
+                <svg class="customer-icon" width="88" height="45">
+                  <use href="./images/sprite.svg#icon-logo_6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -222,24 +458,83 @@
     </main>
     <!--Footer-->
     <footer>
-      <div class="container footer-wrap">
-        <a class="link logo footer-logo" href="/">
-          <span class="logo-color">Web</span>Studio
-        </a>
-        <address>
-          <a
-            class="address link"
-            href="https://goo.gl/maps/uTAoeyb3CEd54Pja7"
-            target="_blank"
-            >г. Киев, пр-т Леси Украинки, 26</a
+      <div class="container flex">
+        <div class="footer-wrap">
+          <a class="link logo footer-logo" href="/">
+            <span class="logo-color">Web</span>Studio
+          </a>
+          <address>
+            <a
+              class="address link"
+              href="https://goo.gl/maps/uTAoeyb3CEd54Pja7"
+              target="_blank"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </address>
+          <a class="footer-contact link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
           >
-        </address>
-        <a class="footer-contact link" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a
-        >
-        <a class="footer-contact link" href="tel:+380961111111"
-          >+38 096 111 11 11</a
-        >
+          <a class="footer-contact link" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </div>
+        <div class="join-us footer-wrap">
+          <p class="join-us-text">присоединяйтесь</p>
+          <ul class="list social-list">
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://www.instagram.com/"
+                aria-label="Instagram"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://twitter.com/"
+                aria-label="Twitter"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://www.facebook.com/"
+                aria-label="Facebook"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://www.linkedin.com/"
+                aria-label="Linkedin"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
