--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
     </header>
 
     <main>
-      <section class="section">
+      <section class="section gallery">
         <div class="container">
           <h1 class="visually-hidden">Gallery</h1>
           <!--Filters-->
@@ -82,7 +82,7 @@
 
           <ul class="list examples">
             <li class="item">
-              <a class="link" href="">
+              <a class="link example-link" href="">
                 <img
                   class="example-photo"
                   src="./images/techno.jpg"
@@ -97,7 +97,7 @@
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link example-link" href="">
                 <img
                   class="example-photo"
                   src="./images/ball.jpg"
@@ -114,7 +114,7 @@
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link example-link" href="">
                 <img
                   class="example-photo"
                   src="./images/sea_food.jpg"
@@ -129,7 +129,7 @@
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link example-link" href="">
                 <img
                   class="example-photo"
                   src="./images/prime.jpg"
@@ -144,7 +144,7 @@
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link example-link" href="">
                 <img
                   class="example-photo"
                   src="./images/boxes.jpg"
@@ -159,7 +159,7 @@
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link example-link" href="">
                 <img
                   class="example-photo"
                   src="./images/monitor.jpg"
@@ -174,7 +174,7 @@
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link example-link" href="">
                 <img
                   class="example-photo"
                   src="./images/limited.jpg"
@@ -189,7 +189,7 @@
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link example-link" href="">
                 <img
                   class="example-photo"
                   src="./images/lab.jpg"
@@ -204,7 +204,7 @@
               </a>
             </li>
             <li class="item">
-              <a class="link" href="">
+              <a class="link example-link" href="">
                 <img
                   class="example-photo"
                   src="./images/growing.jpg"
@@ -224,24 +224,83 @@
     </main>
 
     <footer>
-      <div class="container footer-wrap">
-        <a class="link logo footer-logo" href="/">
-          <span class="logo-color">Web</span>Studio
-        </a>
-        <address>
-          <a
-            class="address link"
-            href="https://goo.gl/maps/uTAoeyb3CEd54Pja7"
-            target="_blank"
-            >г. Киев, пр-т Леси Украинки, 26</a
+      <div class="container flex">
+        <div class="footer-wrap">
+          <a class="link logo footer-logo" href="/">
+            <span class="logo-color">Web</span>Studio
+          </a>
+          <address>
+            <a
+              class="address link"
+              href="https://goo.gl/maps/uTAoeyb3CEd54Pja7"
+              target="_blank"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </address>
+          <a class="footer-contact link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
           >
-        </address>
-        <a class="footer-contact link" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a
-        >
-        <a class="footer-contact link" href="tel:+380961111111"
-          >+38 096 111 11 11</a
-        >
+          <a class="footer-contact link" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </div>
+        <div class="join-us footer-wrap">
+          <p class="join-us-text">присоединяйтесь</p>
+          <ul class="list social-list">
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://www.instagram.com/"
+                aria-label="Instagram"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://twitter.com/"
+                aria-label="Twitter"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://www.facebook.com/"
+                aria-label="Facebook"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://www.linkedin.com/"
+                aria-label="Linkedin"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
